# bento_authorization_service

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  run.bash  run.dev.bash  test-docker.bash
.github/workflows/: build.yml  lint.yml  test.yml
bento_authorization_service/: authz.py  cli.py  config.py  constants.py  db.py  dependencies.py  idp_manager.py  json_schemas.py  logger.py  main.py  models.py  schema.sql  types.py  utils.py
bento_authorization_service/policy_engine/: evaluation.py  permissions.py
bento_authorization_service/routers/: all_permissions.py  grants.py  groups.py  policy.py  schemas.py  utils.py
bento_authorization_service/routers/policy/: __init__.py  common.py  evaluation.py  list_permissions.py  router.py
docs/: permissions_cascade.graffle
tests/: conftest.py  shared_data.py  test_all_permissions.py  test_base_db.py  test_cli.py  test_db.py  test_evaluation.py  test_grants.py  test_groups.py  test_idp_manager.py  test_json_schemas.py  test_permissions.py  test_service_info.py  utils.py
