[tool.poetry]
name = "bento-authorization-service"
version = "0.11.1"
description = "Permissions and authorization service for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
license = "LGPL-3.0-only"
readme = "README.md"
packages = [{include = "bento_authorization_service"}]

[tool.poetry.scripts]
bento_authz = "bento_authorization_service.cli:main_sync"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiodns = "^3.5.0"
aiofiles = "^25.1.0"
aiohttp = "^3.13.1"
asyncpg = "^0.30.0"
bento-lib = {extras = ["fastapi"], version = "^14.0.0"}
fastapi = {extras = ["all"], version = "^0.119.1"}
jsonschema = "^4.25.1"
pydantic = "^2.12.3"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
pydantic-settings = "^2.11.0"
structlog = "^25.4.0"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.11.0"
pytest = "^8.4.2"
debugpy = "^1.8.17"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
pytest-cov = "^7.0.0"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
